// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Document loading 1`] = `
<div
  className="editor__document editor__document--base editor__document--hover"
>
  <h2
    className="editor__document-title"
  >
    Loading
  </h2>
</div>
`;

exports[`Error loading Document 1`] = `
<div
  className="editor__document editor__document--base editor__document--hover"
>
  <h2
    className="editor__document-title"
  >
    Error loading Foundation Document
  </h2>
  <button
    className="editor__button editor__button--reload"
    onClick={[Function]}
  >
    retry?
  </button>
</div>
`;

exports[`Successfully loaded Document 1`] = `
<div
  className="editor__document editor__document--base editor__document--hover"
  onClick={[Function]}
>
  <div>
    <h2
      className="editor__document-title"
    >
      Amendment 13
    </h2>
    <div
      className={undefined}
      onMouseUp={undefined}
    >
      <p
        data-char-offset={0}
      >
        Section 1. 
        <span
          className="editor__document-highlight"
        >
          Neither slavery nor involuntary servitude,
        </span>
         except as a punishment for crime whereof the party shall have been duly convicted, shall exist within the United States, or any place subject to their jurisdiction.
      </p>
    </div>
  </div>
</div>
`;
